tests/paczka1/fuzzy1/36649040.err
Error in line 32: x6Ymo6044 A234 21,85
Error in line 30: ufHW S365 51,1
Error in line 31: Y3A7F58n5ny A179 57,5
